2011-10-01  Geoffrey Garen  <ggaren@apple.com>

        Leopard build fix: Updated for Strong<T> changes.

        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        * WebView/WebScriptDebugger.mm:

2011-09-28  Joseph Pecoraro  <joepeck@webkit.org>

        ASSERT if WebView's UIDelegate does not implement webView:runOpenPanel
        https://bugs.webkit.org/show_bug.cgi?id=69037

        Reviewed by Alexey Proskuryakov.

        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::runOpenPanel):
        If no delegate is implemented, dismiss the listener
        with a cancel. It expects some action.

2011-09-28  Anton D'Auria  <adauria@apple.com>

        Expose +[WebStorageManager _storageDirectoryPath] as SPI
        https://bugs.webkit.org/show_bug.cgi?id=68951

        Reviewed by Brady Eidson.

        This patch exposes +[WebStorageManager _storageDirectoryPath], which
        pulls the path from NSUserDefaults if the preference is set. Otherwise,
        it falls back on the default path.

        * Storage/WebStorageManager.mm:
        (+[WebStorageManager _storageDirectoryPath]): Adding static variable
        so that we don't reread user defaults repeatedly.
        (WebKitInitializeStorageIfNecessary):
        * Storage/WebStorageManagerPrivate.h:

2011-09-27  Andy Estes  <aestes@apple.com>

        WebKitLinkedOnOrAfter() check is ineffective for Solar Walk app-specific hack.
        https://bugs.webkit.org/show_bug.cgi?id=68863

        Reviewed by Darin Adler.

        The SolarWalk binary does not link against WebKit.framework directly,
        so calling NSVersionOfLinkTimeLibrary() will not return the version of
        WebKit against which SolarWalk was linked. Since Solar Walk has
        released an update that addresses the issue for which this app-specific
        hack was originally added, we should just remove the hack.

        * Misc/SolarWalkQuirksUserScript.js: Removed.