@@ -1,3 +1,12 @@
+2011-10-02  Alexey Proskuryakov  <ap@apple.com>
+
+        REGRESSION (r95474): Unable to type anywhere in nightly builds in WebKit1 mode
+        https://bugs.webkit.org/show_bug.cgi?id=68542
+
+        Reviewed by Mark Rowe.
+
+        * WebView/WebView.mm: (-[WebView _usesDocumentViews]): Re-add this method for now.
+
 2011-10-01  Geoffrey Garen  <ggaren@apple.com>
 
         Leopard build fix: Updated for Strong<T> changes.
